Bug 620106 - Allow chardet (if enabled) reload the page during load. r=sicking, a=blocking2.0-final.